--- a/support/mrf-pci-dkms-0.1.20220406/debian/changelog
+++ b/support/mrf-pci-dkms-0.1.20220406/debian/changelog
@@ -1,3 +1,9 @@
+mrf-pci-dkms (0.1.20220406) stable; urgency=low
+
+  * Make code compatible with kernel 5.0 (and newer versions).
+
+ -- Dynamic Kernel Modules Support Team <pkg-dkms-maint@lists.alioth.debian.org>  Thu, 06 Apr 2023 10:03:38 +0200
+
 mrf-pci-dkms (0.1.20190927) stable; urgency=low
 
   * Include upstream changes.
