--- a/support/mrf-pci-dkms-0.1.20250218/debian/changelog
+++ b/support/mrf-pci-dkms-0.1.20250218/debian/changelog
@@ -1,3 +1,9 @@
+mrf-pci-dkms (0.1.20250218) stable; urgency=low
+
+  * Make code compatible with kernel 6.4 (and newer versions).
+
+ -- Dynamic Kernel Modules Support Team <pkg-dkms-maint@lists.alioth.debian.org>  Tue, 18 Feb 2025 23:46:49 +0100
+
 mrf-pci-dkms (0.1.20220406) stable; urgency=low
 
   * Make code compatible with kernel 5.0 (and newer versions).
